--- a/package.json
+++ b/package.json
@@ -9,19 +9,47 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-react": "^11.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/extension-character-count": "^3.2.0",
+    "@tiptap/extension-code-block-lowlight": "^3.2.0",
+    "@tiptap/extension-color": "^3.2.0",
+    "@tiptap/extension-highlight": "^3.2.0",
+    "@tiptap/extension-image": "^3.2.0",
+    "@tiptap/extension-link": "^3.2.0",
+    "@tiptap/extension-placeholder": "^3.2.0",
+    "@tiptap/extension-table": "^3.2.0",
+    "@tiptap/extension-table-cell": "^3.2.0",
+    "@tiptap/extension-table-header": "^3.2.0",
+    "@tiptap/extension-table-row": "^3.2.0",
+    "@tiptap/extension-task-item": "^3.2.0",
+    "@tiptap/extension-task-list": "^3.2.0",
+    "@tiptap/extension-text-align": "^3.2.0",
+    "@tiptap/extension-text-style": "^3.2.0",
+    "@tiptap/extension-typography": "^3.2.0",
+    "@tiptap/extension-underline": "^3.2.0",
+    "@tiptap/react": "^3.2.0",
+    "@tiptap/starter-kit": "^3.2.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "highlight.js": "^11.11.1",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.540.0",
-    "next": "15.5.0",
+    "next": "^15.5.0",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-variants": "^2.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "y-quill": "^1.0.0",
+    "y-websocket": "^3.0.0",
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
